PB infected shows in meetings, Update CTA App BG (push changes), Add Bloodmoon

--- a/CTA/CustomTeamAssigner/PlaySetListerPage.xaml
+++ b/CTA/CustomTeamAssigner/PlaySetListerPage.xaml
@@ -127,7 +127,7 @@ README file in the root directory of this source tree.
 
     <Grid Name="MainGrid">
         <Grid.Background>
-            <ImageBrush ImageSource="bg.jpg"/>
+            <ImageBrush ImageSource="bg.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
